tests/libdef_ignored_module/libdef_ignored_module.exp
Error ------------------------------------------------------------------------------------------------------ test.js:5:1

Cannot cast `foo.bar` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:5:1
   5| foo.bar as string; // error number ~> string
      ^^^^^^^

References:
   lib/foo.js:2:20
   2|   declare var bar: number;
                         ^^^^^^ [1]
   test.js:5:12
   5| foo.bar as string; // error number ~> string
                 ^^^^^^ [2]



Found 1 error
